# orbital-travel-planner

./: .gitignore  INTENTIONAL_ISSUES.md  README.md  SETUP.md  WORKSHOP.md  orbital_travel.db  pyproject.toml
app/: database.py  db_models.py  main.py  middleware.py
app/api/: bookings.py
app/static/: app.js  styles.css
mcp/: server.py
workshop/: README.md  showcase.md  stage1-foundations.md  stage2-meta-programming.md  stage2-orchestration.md  stage3-orchestration.md  stage3-workflow-skills.md  stage4-workflow-skills.md  stage5-mcp-servers.md  stage6-integration.md
workshop/archive/: README.md
workshop/workshop/archive/: stage3-orchestration-old.md
