[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-travel-planner"
version = "0.1.0"
description = "Workshop repo: backend-heavy travel planner with MCP-powered providers and verification loops."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "networkx>=3.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.19",
  "greenlet>=3.0",
  "python-jose[cryptography]>=3.3",
  "slowapi>=0.1.9",
]

[tool.setuptools.packages.find]
include = ["app*", "mcp*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.10",
  "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
